# starknet_balance_gettoor

./: .env.example  .gitignore  ADDITIONAL_OPTIMIZATIONS.md  Cargo.toml  OPTIMIZATIONS.md  README.md
.github/workflows/: ci.yml
src/: balance.rs  main.rs  output.rs
