[package]
name = "balance_gettor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs"}
num-bigint = "0.4.3"
bigdecimal = "0.4.1"
rusqlite = "0.30"
rayon = "1.7"
csv = "1.1"
eyre = "0.6"
clap = { version = "4.0", features = ["derive", "env"] }


