[package]
name = "balance_gettor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs"}
num-bigint = "0.4.3"
bigdecimal = "0.4.1"
rusqlite = { version = "0.30", features = ["bundled"] }
rayon = "1.7"
csv = "1.1"
eyre = "0.6"
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
tempfile = "3.8"

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
incremental = false


